Start with main structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="styles.scss">
+  <link rel="stylesheet" href="scss/styles.scss">
 </head>
 <body class="main-grid">
-  <header>header</header>
+  <header class="main-header">header</header>
   <main>main</main>
-  <nav>nav</nav>
+  <nav class="navigation">
+    <a class="navigation__link navigation__link--active" href="/">H</a>
+    <a class="navigation__link" href="/bookmarks.html">B</a>
+    <a class="navigation__link" href="/create.html">C</a>
+    <a class="navigation__link" href="/profile.html">P</a>
+  </nav>
 </body>
 </html>
