Add card component

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,20 @@
 </head>
 <body class="main-grid">
   <header class="main-header">header</header>
-  <main>main</main>
+  <main class="card__container">
+    <section class="card">
+      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
+    </section>
+    <section class="card">
+      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
+    </section>
+    <section class="card">
+      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
+    </section>
+    <section class="card">
+      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
+    </section>
+  </main>
   <nav class="navigation">
     <a class="navigation__link navigation__link--active" href="/">H</a>
     <a class="navigation__link" href="/bookmarks.html">B</a>
