--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="scss/styles.scss">
-</head>
-<body class="main-grid">
-  <header class="main-header">header</header>
-  <main class="card__container">
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-    <section class="card">
-      <p class="card__question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste quam impedit in. Harum dolor praesentium consequuntur sequi est enim.</p>
-    </section>
-  </main>
-  <nav class="navigation">
-    <a class="navigation__link navigation__link--active" href="/">H</a>
-    <a class="navigation__link" href="/bookmarks.html">B</a>
-    <a class="navigation__link" href="/create.html">C</a>
-    <a class="navigation__link" href="/profile.html">P</a>
-  </nav>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="scss/styles.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body class="main-grid">
+    <header class="main-header">Quiz App</header>
+    <main class="card__container">
+      <section class="card">
+        <span class="card__bookmark">&#10084;</span>
+        <h2>Question</h2>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+        <button class="button mx-auto">Show answer</button>
+        <ul class="tag-list">
+          <li>item1</li>
+          <li>item2</li>
+          <li>item3</li>
+          <li>item4</li>
+        </ul>
+      </section>
+      <section class="card">
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
+        <h2>Question</h2>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+        <button class="button mx-auto">Show answer</button>
+        <ul class="tag-list">
+          <li>item1</li>
+          <li>item2</li>
+          <li>item3</li>
+          <li>item4</li>
+        </ul>
+      </section>
+      <section class="card">
+        <span class="card__bookmark">&#10084;</span>
+        <h2>Question</h2>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+        <button class="button mx-auto">Show answer</button>
+        <ul class="tag-list">
+          <li>item1</li>
+          <li>item2</li>
+          <li>item3</li>
+          <li>item4</li>
+        </ul>
+      </section>
+      <section class="card">
+        <span class="card__bookmark">&#10084;</span>
+        <h2>Question</h2>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+        <button class="button mx-auto">Show answer</button>
+        <ul class="tag-list">
+          <li>item1</li>
+          <li>item2</li>
+          <li>item3</li>
+          <li>item4</li>
+        </ul>
+      </section>
+      <section class="card">
+        <span class="card__bookmark">&#10084;</span>
+        <h2>Question</h2>
+        <p class="card__question">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          dolorum? Non est sed eos sequi, provident atque beatae maiores. Iste
+          quam impedit in. Harum dolor praesentium consequuntur sequi est enim.
+        </p>
+        <button class="button mx-auto">Show answer</button>
+        <ul class="tag-list">
+          <li>item1</li>
+          <li>item2</li>
+          <li>item3</li>
+          <li>item4</li>
+        </ul>
+      </section>
+    </main>
+    <nav class="navigation">
+      <a class="navigation__link navigation__link--active" href="/"
+        ><i class="fa fa-question-circle-o"></i
+      ></a>
+      <a class="navigation__link" href="/bookmarks.html"
+        ><i class="fa fa-bookmark"></i
+      ></a>
+      <a class="navigation__link" href="/create.html"
+        ><i class="fa fa-edit"></i
+      ></a>
+      <a class="navigation__link" href="/profile.html"
+        ><i class="fa fa-user-o"></i
+      ></a>
+    </nav>
+  </body>
 </html>
