--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -13,7 +13,7 @@
     <header class="main-header">Quiz App</header>
     <main class="card__container">
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -45,7 +45,7 @@
         </ul>
       </section>
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -61,7 +61,7 @@
         </ul>
       </section>
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -77,7 +77,7 @@
         </ul>
       </section>
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
