--- a/src/create.html
+++ b/src/create.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="scss/styles.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body class="main-grid">
+    <header class="main-header">Create</header>
 
-</body>
+    <main class="d-flex-row p-20">
+      <section class="txt-center">
+        <label for="question"
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
+          cum.</label
+        >
+        <textarea
+          name="question"
+          id="question"
+          cols="30"
+          rows="7"
+          class="input-field mx-auto mt-20"
+        ></textarea>
+      </section>
+
+      <section class="txt-center mt-20">
+        <label for="answer"
+          >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis,
+          est!</label
+        >
+        <textarea
+          name="answer"
+          id="answer"
+          cols="30"
+          rows="7"
+          class="input-field mx-auto mt-20"
+        ></textarea>
+      </section>
+
+      <section class="txt-center mt-20">
+        <label for="tags"
+          >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem,
+          adipisci.</label
+        >
+        <input
+          type="text"
+          name="tags"
+          id="tags"
+          size="30"
+          class="input-field mx-auto mt-20"
+        />
+      </section>
+      <button class="button mx-auto mt-20">Submit</button>
+    </main>
+
+    <nav class="navigation">
+      <a class="navigation__link" href="/"
+        ><i class="fa fa-question-circle-o"></i
+      ></a>
+      <a class="navigation__link" href="/bookmarks.html"
+        ><i class="fa fa-bookmark"></i
+      ></a>
+      <a class="navigation__link navigation__link--active" href="/create.html"
+        ><i class="fa fa-edit"></i
+      ></a>
+      <a class="navigation__link" href="/profile.html"
+        ><i class="fa fa-user-o"></i
+      ></a>
+    </nav>
+  </body>
 </html>
