Add missing styles on bookmarks

--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -11,10 +11,10 @@
     />
   </head>
   <body class="main-grid">
-    <header class="main-header">Quiz App</header>
+    <header class="main-header">Bookmarks</header>
     <main class="card__container">
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -46,7 +46,7 @@
         </ul>
       </section>
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -62,7 +62,7 @@
         </ul>
       </section>
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -78,7 +78,7 @@
         </ul>
       </section>
       <section class="card">
-        <span class="card__bookmark">&#10084;</span>
+        <span class="card__bookmark card__bookmark--special">&#10084;</span>
         <h2>Question</h2>
         <p class="card__question">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
@@ -95,10 +95,12 @@
       </section>
     </main>
     <nav class="navigation">
-      <a class="navigation__link navigation__link--active" href="/"
+      <a class="navigation__link" href="/"
         ><i class="fa fa-question-circle-o"></i
       ></a>
-      <a class="navigation__link" href="/bookmarks.html"
+      <a
+        class="navigation__link navigation__link--active"
+        href="/bookmarks.html"
         ><i class="fa fa-bookmark"></i
       ></a>
       <a class="navigation__link" href="/create.html"
